Issue #44 - Allow nested template parts with class alignfull to use 100% width

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ figure:not(.alignfull).alignwide {
 
 }
 
+.wp-block-template-part.alignfull > *,
 figure.alignfull {
     margin:0;
 
